# mail-archiver

./: Cargo.toml  README.md
src/: codec.rs  config.rs  main.rs  service.rs
